--- a/index.html
+++ b/index.html
@@ -75,9 +75,6 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
         <div class="detail-pill">👩 Female Stag • ₹1000</div>
         <div class="detail-pill">💑 Couple • ₹2500</div>
       </div>
-      <div class="details-grid" style="align-items:center">
-        <div class="detail-pill">FULL COVER</div>
-      </div>
     </div>
     <div style="margin-top:12px" class="note">NOTE : On-spot charges may differ.</div>
   </div>
@@ -91,9 +88,15 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
       <input class="input" id="main_mobile" placeholder="Mobile number" inputmode="tel" pattern="[0-9]{10}" required>
       <input class="input" id="main_email" placeholder="Email address" type="email" required>
       <select class="input" id="main_gender" required>
-        <option value="">Select gender</option>
+        <option value="" disabled selected>Select gender</option>
         <option value="Male">Male</option>
         <option value="Female">Female</option>
+      </select>
+      <select class="input" id="main_reference" required>
+        <option value="" disabled selected>How did you hear about us?</option>
+        <option value="Jaipur After Hours">Jaipur After Hours</option>
+        <option value="Zenscape">Zenscape</option>
+        <option value="Other Friend">Other Friend</option>
       </select>
       <div class="controls">
         <button type="button" class="btn" id="toStep2">Next ➡️</button>
@@ -140,15 +143,6 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
     </div>
   </form>
 
-  <div id="earlyBirdPopup" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:9999; justify-content:center; align-items:center;">
-  <div style="background:#fff; padding:24px 32px; border-radius:12px; text-align:center; max-width:320px; box-shadow:0 8px 24px rgba(0,0,0,0.2);">
-    <h2 style="color:#d84315; margin-bottom:12px;">🎉 Early Bird Offer!</h2>
-    <p>Girls Stag: FREE  <br> Couple: ₹1000 only (Full Cover) </p>
-    <button id="closeEarlyBird" style="margin-top:16px; padding:10px 20px; border:none; border-radius:8px; background:#d8b384; color:#fff; cursor:pointer;">Got it!</button>
-  </div>
-</div>
-
-
   <div id="successPopup" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:9999; justify-content:center; align-items:center;">
   <div style="background:#fff; padding:24px 32px; border-radius:12px; text-align:center; max-width:320px; box-shadow:0 8px 24px rgba(0,0,0,0.2);">
     <h2 style="color:green; margin-bottom:12px;">✅ Registration Successful!</h2>
@@ -159,10 +153,6 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 </div>
 
 <script>
-
-  const EARLY_BIRD_ACTIVE = true;
-/* ---------- state & helpers ---------- */
-
 const WEBHOOK_URL = 'https://adminharsh.app.n8n.cloud/webhook/diwali-registration';
 const steps = Array.from(document.querySelectorAll('.step'));
 let currentStep = 0;
@@ -174,7 +164,6 @@ function showStep(index){
   window.scrollTo({ top: 0, behavior: 'smooth' });
 }
 
-/* validation helpers */
 function isNotEmpty(el){ return el && el.value && el.value.trim() !== ''; }
 function validateMainPerson(){
   const mainName = document.getElementById('main_name');
@@ -188,14 +177,13 @@ function validateMainPerson(){
   return true;
 }
 
-/* generate guest fields */
 function generateGuestFields(){
   const num = parseInt(document.getElementById('numPeople').value) || 1;
   const container = document.getElementById('peopleContainer');
   container.innerHTML = '';
 
   if(num <= 1){
-    calculateAndShow(); // no additional guests
+    calculateAndShow(); 
     return;
   }
 
@@ -219,50 +207,24 @@ function generateGuestFields(){
   calculateAndShow();
 }
 
-/* attach listeners to dynamically created guest fields */
 function attachGuestListeners(){
   const container = document.getElementById('peopleContainer');
-  // listen for change on all guest gender selects
   container.querySelectorAll('select.guest-gender').forEach(sel=>{
     sel.removeEventListener('change', calculateAndShow);
     sel.addEventListener('change', calculateAndShow);
   });
-  // when guest name/insta change, no need to recalc totals but keep them required
   container.querySelectorAll('input.guest-name, input.guest-insta').forEach(inp=>{
-    inp.addEventListener('input', ()=>{/* nothing but ensures required attribute works */});
+    inp.addEventListener('input', ()=>{});
   });
 }
 
-/* calculate couples & total */
-// normal price
-//   function calculateTotals(){
-//   let males = 0, females = 0;
-//   const mainGender = document.getElementById('main_gender').value;
-//   if(mainGender === 'Male') males++;
-//   else if(mainGender === 'Female') females++;
-
-//   document.querySelectorAll('#peopleContainer select.guest-gender').forEach(sel=>{
-//     const v = sel.value;
-//     if(v === 'Male') males++;
-//     else if(v === 'Female') females++;
-//   });
-
-//   const couples = Math.min(males, females);
-//   const remainingMales = males - couples;
-//   const remainingFemales = females - couples;
-//   const total = (couples * 2500) + (remainingMales * 2000) + (remainingFemales * 1000);
-
-//   return { couples, remainingMales, remainingFemales, total, males, females };
-// }
-
-// Early Bird Price
-  function calculateTotals() {
+function calculateTotals(){
   let males = 0, females = 0;
   const mainGender = document.getElementById('main_gender').value;
   if(mainGender === 'Male') males++;
   else if(mainGender === 'Female') females++;
 
-  document.querySelectorAll('#peopleContainer select.guest-gender').forEach(sel => {
+  document.querySelectorAll('#peopleContainer select.guest-gender').forEach(sel=>{
     const v = sel.value;
     if(v === 'Male') males++;
     else if(v === 'Female') females++;
@@ -271,26 +233,11 @@ function attachGuestListeners(){
   const couples = Math.min(males, females);
   const remainingMales = males - couples;
   const remainingFemales = females - couples;
-
-  // --- Early Bird Prices ---
-  let total = 0;
-  // Main person
-  if(mainGender === 'Male') total += 2000;
-  else if(mainGender === 'Female') total += 0; // Female Stag free
-  // Guests
-  document.querySelectorAll('#peopleContainer .person-fields').forEach(div => {
-    const gender = div.querySelector('select.guest-gender').value;
-    if(gender === 'Male') total += 2000;
-    else if(gender === 'Female') total += 0; // free
-  });
-  // Couples price
-  total += couples * 1000; // early bird couple price
+  const total = (couples * 2500) + (remainingMales * 2000) + (remainingFemales * 1000);
 
   return { couples, remainingMales, remainingFemales, total, males, females };
 }
 
-
-/* update UI summary */
 function calculateAndShow(){
   const res = calculateTotals();
   totalAmount = res.total;
@@ -300,7 +247,6 @@ function calculateAndShow(){
   finalEl.textContent = `💰 Total Payment: ₹${res.total} — Couples: ${res.couples}, Single Males: ${res.remainingMales}, Single Females: ${res.remainingFemales}`;
 }
 
-/* validate guest fields */
 function validateGuests(){
   const num = parseInt(document.getElementById('numPeople').value) || 1;
   if(num <= 1) return true;
@@ -314,7 +260,6 @@ function validateGuests(){
   return true;
 }
 
-/* navigation wiring */
 document.getElementById('toStep2').addEventListener('click', ()=>{
   if(!validateMainPerson()){
     alert('Please complete main person details correctly (all fields required, valid mobile/email).');
@@ -325,171 +270,146 @@ document.getElementById('toStep2').addEventListener('click', ()=>{
 
 document.getElementById('backTo1').addEventListener('click', ()=> showStep(0));
 document.getElementById('toStep3').addEventListener('click', ()=>{
-  const n = parseInt(document.getElementById('numPeople').value);
-  if(!n || n < 1){ alert('Please enter total number of people (at least 1).'); return; }
+  const num = parseInt(document.getElementById('numPeople').value) || 1;
+  if(num < 1){ alert('Enter at least 1'); return; }
   generateGuestFields();
   showStep(2);
 });
 document.getElementById('backTo2').addEventListener('click', ()=> showStep(1));
 document.getElementById('toStep4').addEventListener('click', ()=>{
-  if(!validateGuests()){ alert('Please fill all guest details (name, instagram, gender).'); return; }
+  if(!validateGuests()){ alert('Please complete all guest details.'); return; }
   calculateAndShow();
   showStep(3);
 });
-document.getElementById('backTo3').addEventListener('click', ()=> showStep(2));
 
-/* recalc when main gender or numPeople changes */
-document.getElementById('main_gender').addEventListener('change', calculateAndShow);
-document.getElementById('numPeople').addEventListener('input', ()=>{/* no auto-generate until next pressed */});
-
-/* submit handler */
-document.getElementById('diwaliForm').addEventListener('submit', async function(e) {
+document.getElementById('diwaliForm').addEventListener('submit', async (e) => {
   e.preventDefault();
-
-  const txn = document.getElementById('upiTxn');
-  const fileInput = document.getElementById('upiScreenshot');
-
-  // 🧩 Validation
-  // if (!txn || !txn.value.trim()) {
-  //   alert('⚠️ Please enter the UPI transaction ID.');
-  //   showStep(3);
-  //   return;
-  // }
-
-  if (!allGirls) { // Only validate payment if not all girls under early bird
-    if (!txn || !txn.value.trim()) {
-      alert('⚠️ Please enter the UPI transaction ID.');
-      showStep(3);
-      return;
-    }
-
-  if (!fileInput || !fileInput.files || fileInput.files.length === 0) {
-    alert('⚠️ Please upload the payment screenshot.');
-    showStep(3);
-    return;
+  const txnId = document.getElementById('upiTxn').value.trim();
+  const screenshot = document.getElementById('upiScreenshot').files[0];
+  if(!txnId || !screenshot){ 
+    alert('Please provide transaction ID and screenshot'); 
+    return; 
   }
 
-  // 🧩 Prepare data
-  // const payload = collectSubmissionData();
-  // const file = fileInput.files[0];
-  // const base64File = await toBase64(file);
-    
-const payload = collectSubmissionData();
-  let base64File = "";
-  if(!allGirls){ // only convert file if payment required
-    const file = fileInput.files[0];
-    base64File = await toBase64(file);
-  }
-    
-
-  const dataToSend = {
-    ...payload,
-    upiTxn: txn.value.trim(),
-    upiScreenshot: base64File,
-  };
-
-  console.log('🚀 Sending Payload to n8n:', dataToSend);
-
-  try {
-    const response = await fetch("https://adminharsh.app.n8n.cloud/webhook/diwali-registration", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify(dataToSend),
-    });
-
-    if (!response.ok && response.type !== "opaque") {
-      throw new Error(`Server responded with ${response.status}`);
-    }
-
-    // ✅ Show success animation/message
-    document.getElementById('successPopup').style.display = 'flex';
-  
-    setTimeout(() => {
-      document.getElementById('diwaliForm').reset();
-      document.getElementById('peopleContainer').innerHTML = '';
-      document.getElementById('calcSummary').textContent = '💰 Total Payment: ₹0';
-      document.getElementById('finalBreakdown').textContent = '💰 Total Payment: ₹0';
-      showStep(0);
-      document.getElementById('successMsg').style.display = 'none';
-    }, 1500);
-
-  } catch (error) {
-    console.error('❌ Submission failed:', error);
-    alert('Something went wrong while sending data to n8n. Please try again.');
-  }
-}
-});
-
-// 🧩 Helper: Convert File → Base64
-function toBase64(file) {
-  return new Promise((resolve, reject) => {
-    const reader = new FileReader();
-    reader.readAsDataURL(file);
-    reader.onload = () => resolve(reader.result);
-    reader.onerror = error => reject(error);
-  });
-}
-
-
-// Helper: Convert file to Base64
-function toBase64(file) {
-  return new Promise((resolve, reject) => {
-    const reader = new FileReader();
-    reader.readAsDataURL(file);
-    reader.onload = () => resolve(reader.result);
-    reader.onerror = error => reject(error);
-  });
-}
-
-
-/* collect submission data */
-function collectSubmissionData(){
   const main = {
     name: document.getElementById('main_name').value.trim(),
     instagram: document.getElementById('main_instagram').value.trim(),
     mobile: document.getElementById('main_mobile').value.trim(),
     email: document.getElementById('main_email').value.trim(),
-    gender: document.getElementById('main_gender').value
+    gender: document.getElementById('main_gender').value,
+    reference: document.getElementById('main_reference').value
   };
-  const num = parseInt(document.getElementById('numPeople').value) || 1;
+
   const guests = [];
-  document.querySelectorAll('#peopleContainer .person-fields').forEach((div, idx)=>{
-    const name = div.querySelector('input.guest-name').value.trim();
-    const insta = div.querySelector('input.guest-insta').value.trim();
-    const gender = div.querySelector('select.guest-gender').value;
-    guests.push({ name, insta, gender });
+  document.querySelectorAll('#peopleContainer .person-fields').forEach((pf) => {
+    const gName = pf.querySelector('.guest-name').value.trim();
+    const gInsta = pf.querySelector('.guest-insta').value.trim();
+    const gGender = pf.querySelector('.guest-gender').value;
+    guests.push({ name:gName, instagram:gInsta, gender:gGender });
   });
-  const totals = calculateTotals();
-  const upiTxn = document.getElementById('upiTxn') ? document.getElementById('upiTxn').value.trim() : '';
-  return { main, totalPeople: num, guests, totals, upiTxn };
+
+  const payload = {
+    main, guests, totalAmount, txnId
+  };
+  
+  // Show loading first
+  showLoading(true);
+
+  // Give browser a moment to paint overlay
+  await new Promise(r => setTimeout(r, 50));
+
+  try {
+    const response = await fetch(WEBHOOK_URL, { 
+      method: 'POST', 
+      headers: { 'Content-Type': 'application/json' }, 
+      body: JSON.stringify(payload) 
+    });
+
+    showLoading(false);
+
+    // Check for error after getting response
+    if (!response.ok && response.type !== "opaque") {
+      throw new Error(`Server responded with ${response.status}`);
+    }
+
+    document.getElementById('successPopup').style.display = 'flex';
+
+  } catch(err) {
+    showLoading(false);
+    console.error(err); 
+    alert('Error submitting. Try again.');
+  }
+});
+
+
+
+document.getElementById('closePopup').addEventListener('click', ()=>{
+  document.getElementById('successPopup').style.display = 'none';
+  window.location.reload();
+});
+
+document.getElementById('numPeople').addEventListener('change', generateGuestFields);
+document.getElementById('main_gender').addEventListener('change', calculateAndShow);
+
+function showLoading(show) {
+  const loading = document.getElementById('loadingOverlay');
+  loading.style.display = show ? 'flex' : 'none';
 }
 
-/* sparkle generator */
-(function generateSparkles(){
-  const sparkle = document.querySelector('.sparkle');
-  if(!sparkle) return;
-  for(let i=0;i<22;i++){
-    const s = document.createElement('span');
-    s.style.left = (Math.random()*100)+'%';
-    s.style.top = (Math.random()*100)+'%';
-    s.style.animationDelay = (Math.random()*3)+'s';
-    sparkle.appendChild(s);
-  }
-})();
+</script>
 
-/* initial calc to show main only if gender selected */
-calculateAndShow();
+<!-- EARLY BIRD OFFER POPUP -->
+<div id="earlyBirdPopup" style="display:flex; position:fixed; inset:0; background:rgba(0,0,0,0.55); z-index:9998; justify-content:center; align-items:center;">
+  <div style="background:#fffaf4; padding:28px 36px; border-radius:16px; text-align:center; max-width:360px; box-shadow:0 8px 30px rgba(0,0,0,0.25); position:relative;">
+    <button id="closeEarlyBird" style="position:absolute; top:10px; right:10px; background:none; border:none; font-size:1.4rem; cursor:pointer; color:#b89263;">✖</button>
+    <h2 style="font-family:'Playfair Display',serif; color:#b89263; margin-bottom:10px;">✨ Early Bird Offer ✨</h2>
+    <p style="color:#5c4733; font-size:1rem; line-height:1.5; margin-bottom:12px;">
+      Limited slots available! Be among the first to book your passes for<br><strong>Diwali Night: A Night Under The Sky</strong> 🌌
+    </p>
+    <div style="background:linear-gradient(180deg,#fff7e8,#fff1d6); border:1px solid #e9dfd2; border-radius:10px; padding:12px; margin-bottom:12px;">
+      <p style="margin:6px 0; font-weight:600; color:#6e543b;">👩 Girls: <span style="color:green;">FREE ENTRY</span></p>
+      <p style="margin:6px 0; font-weight:600; color:#6e543b;">💑 Couples: ₹1000 <span style="color:#7a4f34;">(Full Cover)</span></p>
+    </div>
+    <p style="color:#7a6b5d; font-size:0.9rem;">Offer valid till limited slots last — hurry up!</p>
+    <button id="earlyBirdOk" style="margin-top:12px; background:#d8b384; color:#fff; border:none; border-radius:8px; padding:10px 22px; cursor:pointer; font-weight:600;">Got it! 🎉</button>
+  </div>
+</div>
 
-indow.addEventListener('load', () => {
-  document.getElementById('earlyBirdPopup').style.display = 'flex';
-});
+<div id="loadingOverlay" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.4); z-index:10000; justify-content:center; align-items:center;">
+  <div style="background:#fff;padding:24px 32px;border-radius:12px;font-weight:600;">⏳ Processing your registration...</div>
+</div>
 
-document.getElementById('closeEarlyBird').addEventListener('click', () => {
-  document.getElementById('earlyBirdPopup').style.display = 'none';
-});
+
+
+
+<script>
   
+/* ---------- Early Bird Offer Popup ---------- */
+window.addEventListener('load', () => {
+  if (window.earlyBirdShown) return;
+  // window.earlyBirdShown = true;
+  const popup = document.getElementById('earlyBirdPopup');
+  const closeBtn = document.getElementById('closeEarlyBird');
+  const okBtn = document.getElementById('earlyBirdOk');
+
+  // ✅ Make sure popup exists before trying to use it
+  if (!popup || !closeBtn || !okBtn) return;
+
+  // Show popup after short delay
+  setTimeout(() => {
+    if (!sessionStorage.getItem('earlyBirdShown')) {
+    popup.style.display = 'flex';
+    sessionStorage.setItem('earlyBirdShown', 'true');
+  }
+}, 1000);
+
+  // Close logic for both buttons
+  const hidePopup = () => popup.style.display = 'none';
+
+  closeBtn.addEventListener('click', hidePopup);
+  okBtn.addEventListener('click', hidePopup);
+});
+
 </script>
 </body>
 </html>
