--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 <body>
 <header>
   <h1>✨ Diwali Night: A Night Under The Sky ✨</h1>
-  <p><strong>Jaipur After Hours x The Forresta</strong></p>
+  <p><strong>Jaipur After Hours</strong></p>
+  <p><strong>The Foresta x Zenscape x Ignite Jaipur</strong></p>
   <p class="header-note">📍 <a href="https://maps.app.goo.gl/V9sfvTeTSCVdNRBR9" target="_blank" rel="noopener">The Forresta, Jaipur</a>  &nbsp; | &nbsp; 📅 17th October  &nbsp; | &nbsp; 👗 Ethnic</p>
   <div class="sparkle" aria-hidden="true"></div>
 </header>
@@ -70,13 +71,21 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
           <li>🌌 Celebrate Diwali under the stars</li>
         </ul>
       </div>
+      <div>
+        <p style="margin:0 0 8px 0;"><strong>You've celebrated Diwali before - NOW live it... After Hours</strong></p>
+        <ul>
+          <li> EAT|DANCE|SHINE|REPEAT</li>
+          <li> Fire dance floors</li>
+          <li> It's Diwali done the Zenscape way!</li>
+        </ul>
+      </div>
       <div class="details-grid" style="align-items:center">
         <div class="detail-pill">👨 Male Stag • ₹2000</div>
         <div class="detail-pill">👩 Female Stag • ₹1000</div>
-        <div class="detail-pill">💑 Couple • ₹2500</div>
+        <div class="detail-pill">💑 Couple • ₹2000</div>
       </div>
     </div>
-    <div style="margin-top:12px" class="note">NOTE : On-spot charges may differ.</div>
+    <div style="margin-top:12px" class="note">* Table Booking Live Tomorrow</div>
   </div>
 
   <form id="diwaliForm" novalidate>
@@ -88,16 +97,18 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
       <input class="input" id="main_mobile" placeholder="Mobile number" inputmode="tel" pattern="[0-9]{10}" required>
       <input class="input" id="main_email" placeholder="Email address" type="email" required>
       <select class="input" id="main_gender" required>
-        <option value="" disabled selected>Select gender</option>
+        <option value="">Select gender</option>
         <option value="Male">Male</option>
         <option value="Female">Female</option>
       </select>
       <select class="input" id="main_reference" required>
-        <option value="" disabled selected>How did you hear about us?</option>
+        <option value="">How did you hear about us?</option>
         <option value="Jaipur After Hours">Jaipur After Hours</option>
         <option value="Zenscape">Zenscape</option>
-        <option value="Other Friend">Other Friend</option>
+        <option value="Ignite Jaipur">Ignite Jaipur</option>
+        <option value="Other">Other</option>
       </select>
+      
       <div class="controls">
         <button type="button" class="btn" id="toStep2">Next ➡️</button>
       </div>
@@ -153,6 +164,8 @@ h2{ font-family:'Playfair Display',serif; color:var(--dark-gold); margin:0 0 16p
 </div>
 
 <script>
+/* ---------- state & helpers ---------- */
+
 const WEBHOOK_URL = 'https://adminharsh.app.n8n.cloud/webhook/diwali-registration';
 const steps = Array.from(document.querySelectorAll('.step'));
 let currentStep = 0;
@@ -164,6 +177,7 @@ function showStep(index){
   window.scrollTo({ top: 0, behavior: 'smooth' });
 }
 
+/* validation helpers */
 function isNotEmpty(el){ return el && el.value && el.value.trim() !== ''; }
 function validateMainPerson(){
   const mainName = document.getElementById('main_name');
@@ -177,13 +191,14 @@ function validateMainPerson(){
   return true;
 }
 
+/* generate guest fields */
 function generateGuestFields(){
   const num = parseInt(document.getElementById('numPeople').value) || 1;
   const container = document.getElementById('peopleContainer');
   container.innerHTML = '';
 
   if(num <= 1){
-    calculateAndShow(); 
+    calculateAndShow(); // no additional guests
     return;
   }
 
@@ -207,17 +222,21 @@ function generateGuestFields(){
   calculateAndShow();
 }
 
+/* attach listeners to dynamically created guest fields */
 function attachGuestListeners(){
   const container = document.getElementById('peopleContainer');
+  // listen for change on all guest gender selects
   container.querySelectorAll('select.guest-gender').forEach(sel=>{
     sel.removeEventListener('change', calculateAndShow);
     sel.addEventListener('change', calculateAndShow);
   });
+  // when guest name/insta change, no need to recalc totals but keep them required
   container.querySelectorAll('input.guest-name, input.guest-insta').forEach(inp=>{
-    inp.addEventListener('input', ()=>{});
+    inp.addEventListener('input', ()=>{/* nothing but ensures required attribute works */});
   });
 }
 
+/* calculate couples & total */
 function calculateTotals(){
   let males = 0, females = 0;
   const mainGender = document.getElementById('main_gender').value;
@@ -233,11 +252,13 @@ function calculateTotals(){
   const couples = Math.min(males, females);
   const remainingMales = males - couples;
   const remainingFemales = females - couples;
-  const total = (couples * 2500) + (remainingMales * 2000) + (remainingFemales * 1000);
+  const total = (couples * 2000) + (remainingMales * 2000) + (remainingFemales * 1000);
 
   return { couples, remainingMales, remainingFemales, total, males, females };
 }
 
+
+/* update UI summary */
 function calculateAndShow(){
   const res = calculateTotals();
   totalAmount = res.total;
@@ -247,6 +268,7 @@ function calculateAndShow(){
   finalEl.textContent = `💰 Total Payment: ₹${res.total} — Couples: ${res.couples}, Single Males: ${res.remainingMales}, Single Females: ${res.remainingFemales}`;
 }
 
+/* validate guest fields */
 function validateGuests(){
   const num = parseInt(document.getElementById('numPeople').value) || 1;
   if(num <= 1) return true;
@@ -260,6 +282,7 @@ function validateGuests(){
   return true;
 }
 
+/* navigation wiring */
 document.getElementById('toStep2').addEventListener('click', ()=>{
   if(!validateMainPerson()){
     alert('Please complete main person details correctly (all fields required, valid mobile/email).');
@@ -270,27 +293,134 @@ document.getElementById('toStep2').addEventListener('click', ()=>{
 
 document.getElementById('backTo1').addEventListener('click', ()=> showStep(0));
 document.getElementById('toStep3').addEventListener('click', ()=>{
-  const num = parseInt(document.getElementById('numPeople').value) || 1;
-  if(num < 1){ alert('Enter at least 1'); return; }
+  const n = parseInt(document.getElementById('numPeople').value);
+  if(!n || n < 1){ alert('Please enter total number of people (at least 1).'); return; }
   generateGuestFields();
   showStep(2);
 });
 document.getElementById('backTo2').addEventListener('click', ()=> showStep(1));
 document.getElementById('toStep4').addEventListener('click', ()=>{
-  if(!validateGuests()){ alert('Please complete all guest details.'); return; }
+  if(!validateGuests()){ alert('Please fill all guest details (name, instagram, gender).'); return; }
   calculateAndShow();
   showStep(3);
 });
+document.getElementById('backTo3').addEventListener('click', ()=> showStep(2));
 
-document.getElementById('diwaliForm').addEventListener('submit', async (e) => {
+/* recalc when main gender or numPeople changes */
+document.getElementById('main_gender').addEventListener('change', calculateAndShow);
+document.getElementById('numPeople').addEventListener('input', ()=>{/* no auto-generate until next pressed */});
+
+/* submit handler */
+// submit handler
+document.getElementById('diwaliForm').addEventListener('submit', async function(e) {
   e.preventDefault();
-  const txnId = document.getElementById('upiTxn').value.trim();
-  const screenshot = document.getElementById('upiScreenshot').files[0];
-  if(!txnId || !screenshot){ 
-    alert('Please provide transaction ID and screenshot'); 
-    return; 
+
+  const txn = document.getElementById('upiTxn');
+  const fileInput = document.getElementById('upiScreenshot');
+
+  // Validation
+  if (!txn || !txn.value.trim()) {
+    alert('⚠️ Please enter the UPI transaction ID.');
+    showStep(3);
+    return;
   }
 
+  if (!fileInput || !fileInput.files || fileInput.files.length === 0) {
+    alert('⚠️ Please upload the payment screenshot.');
+    showStep(3);
+    return;
+  }
+
+  // Prepare payload
+  const payload = {
+  ...collectSubmissionData(),
+  reference: document.getElementById('main_reference').value.trim()
+};
+  const file = fileInput.files[0];
+  const base64File = await toBase64(file);
+
+  const dataToSend = {
+    ...payload,
+    upiTxn: txn.value.trim(),
+    upiScreenshot: base64File,
+  };
+
+  console.log('🚀 Sending Payload to n8n:', dataToSend);
+
+  // Show loading overlay
+  showLoading(true);
+
+  try {
+    const response = await fetch("https://adminharsh.app.n8n.cloud/webhook/diwali-registration", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(dataToSend),
+    });
+
+    if (!response.ok && response.type !== "opaque") {
+      throw new Error(`Server responded with ${response.status}`);
+    }
+
+    // Hide loading
+    showLoading(false);
+
+    // Show success popup
+    const successPopup = document.getElementById('successPopup');
+    successPopup.style.display = 'flex';
+  } catch (error) {
+    console.error('❌ Submission failed:', error);
+    showLoading(false);
+    alert('Something went wrong while sending data to n8n. Please try again.');
+  }
+});
+
+// Close success popup
+document.getElementById('closePopup').addEventListener('click', () => {
+  const successPopup = document.getElementById('successPopup');
+  successPopup.style.display = 'none';
+
+  // Reset form
+  document.getElementById('diwaliForm').reset();
+  document.getElementById('peopleContainer').innerHTML = '';
+  document.getElementById('calcSummary').textContent = '💰 Total Payment: ₹0';
+  document.getElementById('finalBreakdown').textContent = '💰 Total Payment: ₹0';
+  showStep(0);
+});
+
+/* ---------- Helper: Loading overlay ---------- */
+function showLoading(show) {
+  let loading = document.getElementById('loadingOverlay');
+  if(!loading) {
+    // create it if not exists
+    loading = document.createElement('div');
+    loading.id = 'loadingOverlay';
+    loading.style.position = 'fixed';
+    loading.style.inset = '0';
+    loading.style.background = 'rgba(0,0,0,0.4)';
+    loading.style.display = show ? 'flex' : 'none';
+    loading.style.justifyContent = 'center';
+    loading.style.alignItems = 'center';
+    loading.style.zIndex = '10000';
+    loading.innerHTML = '<div style="background:#fff;padding:24px 32px;border-radius:12px;font-weight:600;">⏳ Processing your registration...</div>';
+    document.body.appendChild(loading);
+  }
+  loading.style.display = show ? 'flex' : 'none';
+}
+
+// File to Base64 helper
+function toBase64(file) {
+  return new Promise((resolve, reject) => {
+    const reader = new FileReader();
+    reader.readAsDataURL(file);
+    reader.onload = () => resolve(reader.result);
+    reader.onerror = error => reject(error);
+  });
+}
+
+
+
+/* collect submission data */
+function collectSubmissionData(){
   const main = {
     name: document.getElementById('main_name').value.trim(),
     instagram: document.getElementById('main_instagram').value.trim(),
@@ -299,117 +429,55 @@ document.getElementById('diwaliForm').addEventListener('submit', async (e) => {
     gender: document.getElementById('main_gender').value,
     reference: document.getElementById('main_reference').value
   };
-
+  const num = parseInt(document.getElementById('numPeople').value) || 1;
   const guests = [];
-  document.querySelectorAll('#peopleContainer .person-fields').forEach((pf) => {
-    const gName = pf.querySelector('.guest-name').value.trim();
-    const gInsta = pf.querySelector('.guest-insta').value.trim();
-    const gGender = pf.querySelector('.guest-gender').value;
-    guests.push({ name:gName, instagram:gInsta, gender:gGender });
+  document.querySelectorAll('#peopleContainer .person-fields').forEach((div, idx)=>{
+    const name = div.querySelector('input.guest-name').value.trim();
+    const insta = div.querySelector('input.guest-insta').value.trim();
+    const gender = div.querySelector('select.guest-gender').value;
+    guests.push({ name, insta, gender });
   });
-
-  const payload = {
-    main, guests, totalAmount, txnId
-  };
-  
-  // Show loading first
-  showLoading(true);
-
-  // Give browser a moment to paint overlay
-  await new Promise(r => setTimeout(r, 50));
-
-  try {
-    const response = await fetch(WEBHOOK_URL, { 
-      method: 'POST', 
-      headers: { 'Content-Type': 'application/json' }, 
-      body: JSON.stringify(payload) 
-    });
-
-    showLoading(false);
-
-    // Check for error after getting response
-    if (!response.ok && response.type !== "opaque") {
-      throw new Error(`Server responded with ${response.status}`);
-    }
-
-    document.getElementById('successPopup').style.display = 'flex';
-
-  } catch(err) {
-    showLoading(false);
-    console.error(err); 
-    alert('Error submitting. Try again.');
-  }
-});
-
-
-
-document.getElementById('closePopup').addEventListener('click', ()=>{
-  document.getElementById('successPopup').style.display = 'none';
-  window.location.reload();
-});
-
-document.getElementById('numPeople').addEventListener('change', generateGuestFields);
-document.getElementById('main_gender').addEventListener('change', calculateAndShow);
-
-function showLoading(show) {
-  const loading = document.getElementById('loadingOverlay');
-  loading.style.display = show ? 'flex' : 'none';
+  const totals = calculateTotals();
+  const upiTxn = document.getElementById('upiTxn') ? document.getElementById('upiTxn').value.trim() : '';
+  return { main, totalPeople: num, guests, totals, upiTxn };
 }
 
-</script>
-
-<!-- EARLY BIRD OFFER POPUP -->
-<div id="earlyBirdPopup" style="display:flex; position:fixed; inset:0; background:rgba(0,0,0,0.55); z-index:9998; justify-content:center; align-items:center;">
-  <div style="background:#fffaf4; padding:28px 36px; border-radius:16px; text-align:center; max-width:360px; box-shadow:0 8px 30px rgba(0,0,0,0.25); position:relative;">
-    <button id="closeEarlyBird" style="position:absolute; top:10px; right:10px; background:none; border:none; font-size:1.4rem; cursor:pointer; color:#b89263;">✖</button>
-    <h2 style="font-family:'Playfair Display',serif; color:#b89263; margin-bottom:10px;">✨ Early Bird Offer ✨</h2>
-    <p style="color:#5c4733; font-size:1rem; line-height:1.5; margin-bottom:12px;">
-      Limited slots available! Be among the first to book your passes for<br><strong>Diwali Night: A Night Under The Sky</strong> 🌌
-    </p>
-    <div style="background:linear-gradient(180deg,#fff7e8,#fff1d6); border:1px solid #e9dfd2; border-radius:10px; padding:12px; margin-bottom:12px;">
-      <p style="margin:6px 0; font-weight:600; color:#6e543b;">👩 Girls: <span style="color:green;">FREE ENTRY</span></p>
-      <p style="margin:6px 0; font-weight:600; color:#6e543b;">💑 Couples: ₹1000 <span style="color:#7a4f34;">(Full Cover)</span></p>
-    </div>
-    <p style="color:#7a6b5d; font-size:0.9rem;">Offer valid till limited slots last — hurry up!</p>
-    <button id="earlyBirdOk" style="margin-top:12px; background:#d8b384; color:#fff; border:none; border-radius:8px; padding:10px 22px; cursor:pointer; font-weight:600;">Got it! 🎉</button>
-  </div>
-</div>
-
-<div id="loadingOverlay" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.4); z-index:10000; justify-content:center; align-items:center;">
-  <div style="background:#fff;padding:24px 32px;border-radius:12px;font-weight:600;">⏳ Processing your registration...</div>
-</div>
-
-
-
-
-<script>
-  
-/* ---------- Early Bird Offer Popup ---------- */
-window.addEventListener('load', () => {
-  if (window.earlyBirdShown) return;
-  // window.earlyBirdShown = true;
-  const popup = document.getElementById('earlyBirdPopup');
-  const closeBtn = document.getElementById('closeEarlyBird');
-  const okBtn = document.getElementById('earlyBirdOk');
-
-  // ✅ Make sure popup exists before trying to use it
-  if (!popup || !closeBtn || !okBtn) return;
-
-  // Show popup after short delay
-  setTimeout(() => {
-    if (!sessionStorage.getItem('earlyBirdShown')) {
-    popup.style.display = 'flex';
-    sessionStorage.setItem('earlyBirdShown', 'true');
+/* sparkle generator */
+(function generateSparkles(){
+  const sparkle = document.querySelector('.sparkle');
+  if(!sparkle) return;
+  for(let i=0;i<22;i++){
+    const s = document.createElement('span');
+    s.style.left = (Math.random()*100)+'%';
+    s.style.top = (Math.random()*100)+'%';
+    s.style.animationDelay = (Math.random()*3)+'s';
+    sparkle.appendChild(s);
   }
-}, 1000);
+})();
 
-  // Close logic for both buttons
-  const hidePopup = () => popup.style.display = 'none';
-
-  closeBtn.addEventListener('click', hidePopup);
-  okBtn.addEventListener('click', hidePopup);
-});
-
+/* initial calc to show main only if gender selected */
+calculateAndShow();
 </script>
+
+<div id="loadingOverlay" style="
+    display:none; /* start hidden */
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,0.4);
+    justify-content:center;
+    align-items:center;
+    z-index:10000;
+">
+    <div style="background:#fff;padding:24px 32px;border-radius:12px;font-weight:600; display:flex; align-items:center; gap:12px;">
+        <div class="spinner" style="
+            width:24px; height:24px; border:3px solid #f3f3f3; border-top:3px solid #d8b384;
+            border-radius:50%;
+            animation: spin 1s linear infinite;
+        "></div>
+        Processing your registration...
+    </div>
+</div>
+
+
 </body>
 </html>
